--- a/note-app/package.json
+++ b/note-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@editorjs/editorjs": "^2.27.0",
+    "@editorjs/header": "^2.7.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
