--- a/note-app/package.json
+++ b/note-app/package.json
@@ -13,8 +13,10 @@
     "buffer-equal-constant-time": "^1.0.1",
     "googleapis": "^120.0.0",
     "https": "^1.0.0",
+    "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joi-validation": "^1.7.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
