--- a/note-app/package.json
+++ b/note-app/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^120.0.0",
     "https": "^1.0.0",
     "joi": "^17.9.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-joi-validation": "^1.7.0",
